<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="il.co.appschool.firebasechatapp.SetUPActivity"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/notepad"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setuptitle"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="italic"
        />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/round_edit"
        android:textColor="#fff"
        android:textSize="25sp"
        android:textStyle="italic"
        android:maxLength="15"
        android:hint="@string/display_name"
        android:textColorHint="#fff"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:digits="@string/Display_name_set"
        android:maxLines="1"
        android:id="@+id/etDisplayname"
        />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/round_edit"
        android:textColor="#fff"
        android:textSize="25sp"
        android:textStyle="italic"
        android:maxLength="15"
        android:hint="@string/First_name"
        android:textColorHint="#fff"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:digits="@string/Display_name_set"
        android:maxLines="1"
        android:id="@+id/etFirstname"
        />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/round_edit"
        android:textColor="#fff"
        android:textSize="25sp"
        android:textStyle="italic"
        android:maxLength="15"
        android:hint="@string/Last_name"
        android:textColorHint="#fff"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:digits="@string/Display_name_set"
        android:maxLines="1"
        android:id="@+id/etLastname"
        />

    <Button
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:background="@drawable/round_btn"
        android:textColor="#fff"
        android:text="@string/btnSave"
        android:textSize="18sp"
        android:textStyle="italic"
        android:id="@+id/btnSaveInfo"
        />



</LinearLayout>
