<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="il.co.appschool.firebasechatapp.RegisterActivity"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/note"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:gravity="center"
        android:text="@string/register_title"
        android:textColor="#000"
        android:textSize="30sp"
        />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/round_edit"
        android:textColor="#fff"
        android:textStyle="italic"
        android:hint="@string/email_here"
        android:textColorHint="#fff"
        android:textSize="25sp"
        android:gravity="center"
        android:maxLength="30"
        android:maxLines="1"
        android:id="@+id/etRegisterEmail"
        />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:inputType="textPassword"
        android:background="@drawable/round_edit"
        android:textColor="#fff"
        android:textStyle="italic"
        android:hint="@string/password_here"
        android:textColorHint="#fff"
        android:textSize="25sp"
        android:gravity="center"
        android:maxLength="20"
        android:maxLines="1"
        android:id="@+id/etRegisterPassword"
        />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:inputType="textPassword"
        android:background="@drawable/round_edit"
        android:textColor="#fff"
        android:textStyle="italic"
        android:hint="@string/Confirm_password"
        android:textColorHint="#fff"
        android:textSize="25sp"
        android:gravity="center"
        android:maxLength="20"
        android:maxLines="1"
        android:id="@+id/etConfirmPassword"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="#000"
        android:text="@string/Register_btn"
        android:textColor="#fff"
        android:textSize="25sp"
        android:textStyle="italic"
        android:id="@+id/btn_Register"
        />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="#000"
        android:textColor="#fff"
        android:text="@string/MoveToLog"
        android:id="@+id/btnMoveToLog"
        android:textStyle="italic"
        />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:indeterminate="true"
        android:id="@+id/RegisterProgress"
        />

</LinearLayout>
