<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="il.co.appschool.firebasechatapp.MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="#000"
        android:textStyle="italic"
        android:padding="10dp"
        />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:background="#000"
        android:textColor="#fff"
        android:textStyle="italic"
        android:hint="@string/email_here"
        android:textColorHint="#fff"
        android:textSize="25sp"
        android:gravity="center"
        android:maxLength="30"
        android:maxLines="1"
        android:id="@+id/etLoginEmail"
        />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:inputType="textPassword"
        android:background="#000"
        android:textColor="#fff"
        android:textStyle="italic"
        android:hint="@string/password_here"
        android:textColorHint="#fff"
        android:textSize="25sp"
        android:gravity="center"
        android:maxLength="20"
        android:maxLines="1"
        android:id="@+id/etLoginPassword"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="#000"
        android:text="@string/Login_btn"
        android:textColor="#fff"
        android:textSize="25sp"
        android:textStyle="italic"
        android:id="@+id/btn_Login"
        />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="#000"
        android:textColor="#fff"
        android:text="@string/MovetoReg"
        android:id="@+id/btnMoveToReg"
        android:textStyle="italic"
        />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:indeterminate="true"
        android:id="@+id/LoginProgress"
        />


</LinearLayout>
