<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_title"
        android:gravity="center"
        android:textStyle="italic"
        android:textColor="#000"
        android:textSize="25sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_here"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="#000"
        />

    <EditText
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:background="@drawable/round_edit"
        android:textSize="25sp"
        android:textStyle="italic"
        android:maxLength="25"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:inputType="textEmailAddress"
        android:id="@+id/etDisplaySearch"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#000"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/Search"
        android:textColor="#fff"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:id="@+id/btnAdd"
        />

</LinearLayout>